lab/status/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: status-api
  labels:
    app: status
    owner: tonyhhyip
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: status
        owner: tonyhhyip
    spec:
      serviceAccountName: status-api
      containers:
        - name: statis-api
          image: ysitd/cloud-status:1.0.0
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 16Mi
